--- a/GymMembershipApp/Views/Payments/Index.cshtml
+++ b/GymMembershipApp/Views/Payments/Index.cshtml
@@ -64,7 +64,7 @@
                     <td>@item.PaymentDate.ToString("dd/MM/yyyy HH:mm")</td>
                     <td>@item.Member.FullName</td>
                     <td>@(item.MembershipPlan?.Name ?? "-")</td>
-                    <td>@item.Amount.ToString("C")</td>
+                    <td><strong>$@item.Amount.ToString("0.00")</strong></td>
                     <td>@item.PaymentMethod</td>
                     <td>@item.Status</td>
                     <td>@(item.TransactionReference ?? "-")</td>
